# RabbitHole

./: .dockerignore  404.html  DEV-README.md  Dockerfile  README.md  gemini_models.py  index.html  nextstep.md  pyproject.toml  sitemap-0.xml  sitemap-index.xml
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml
_astro/: client.svelte.TaoYVVHm.js  index.Bz_3i9Sb.css
api/data-models/: index.html
api/json-rpc/: index.html
architecture/: index.html
blueprint/: index.html
core-concepts/: index.html
docs/: FEATURE_IDEAS.md  FRAMEWORK_VISION.md  architecture.md  documentation.md  howto.md
docs-website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
docs-website/src/components/: TabGroup.svelte  TabItem.svelte  TabPanel.svelte  Tabs.svelte
docs-website/src/content/docs/: architecture.md  blueprint.md  core-concepts.md  getting-started.md  how-to.md  how-to.mdx  index.mdx  roadmap.md
docs-website/src/content/docs/api/: data-models.mdx  json-rpc.mdx
getting-started/: index.html
how-to/: index.html
pagefind/: pagefind-entry.json  pagefind.en_b9bdf35f57.pf_meta
pagefind/fragment/: en_276013d.pf_fragment  en_6df7db5.pf_fragment  en_948e047.pf_fragment  en_b15cec3.pf_fragment  en_b9faef5.pf_fragment  en_c7716db.pf_fragment  en_d3f3f21.pf_fragment  en_e04160c.pf_fragment  en_f237ee2.pf_fragment
pagefind/index/: en_42dbae3.pf_index
rabbithole/: __init__.py
rabbithole/a2a/: README.md  types.py
rabbithole/a2a/client/: card_resolver.py  client.py
rabbithole/a2a/server/: server.py  task_manager.py  utils.py
rabbithole/a2a/utils/: in_memory_cache.py
rabbithole/agent/: README.md  __init__.py
rabbithole/agent/adk/: .env.template  __main__.py  agent.py  task_manager.py
rabbithole/agent/oai/: __main__.py  agent.py  task_manager.py
rabbithole/cli/: README.md  __init__.py  __main__.py  push_notification_listener.py
rabbithole/ui/: streamlit_app.py
roadmap/: index.html
website/: astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: architecture.md  blueprint.md  documentation.md  howto.md  index.mdx  roadmap.md
website/src/pages/: index.astro
website/src/pages/docs/: blueprint.md  documentation.md  index.mdx  roadmap.md
